fix: some copy command issues